src/objects/Location__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Description__c</fullName>
        <label>Activity Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_amount__c</fullName>
        <label>Delivered to Project</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Box_Number__c</fullName>
        <label>Box Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_amount__c</fullName>
        <label>Delivered to Hub</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depth__c</fullName>
        <inlineHelpText>Diepte van het schap in CM. Dus met 2 decimalen voor milimeters</inlineHelpText>
        <label>Depth</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grond__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grond</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hub_Building_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hub/Building Site</label>
        <referenceTo>Hub_Building_Site__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hub_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hub Location</label>
        <referenceTo>Hub__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M2_Height__c</fullName>
        <inlineHelpText>De hoogte met 2 decimalen</inlineHelpText>
        <label>Height</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Weight_p_m2__c</fullName>
        <inlineHelpText>Het maximale gewicht pet m2 met 2 decimalen</inlineHelpText>
        <label>Max Weight p/m2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupied__c</fullName>
        <formula>difference__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In gebruik</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pallet_Place__c</fullName>
        <label>Pallet Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Palletplaats_Grond__c</fullName>
        <description>Prijs per grond-palletplaats</description>
        <formula>30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Palletplaats - Grond</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Palletplaats_Standaard__c</fullName>
        <description>Prijs per standaard-palletplaats</description>
        <formula>15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Palletplaats - Standaard</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Sublocations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SF_ID__c</fullName>
        <externalId>true</externalId>
        <label>SF_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shelving_Subdivision__c</fullName>
        <label>Shelving (Subdivision)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <label>Warehouse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <inlineHelpText>De breedte van het schap in cm met 2 decimalen voor de milimeters</inlineHelpText>
        <label>Width</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>difference__c</fullName>
        <formula>Current_amount__c-Available_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verschil</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Locatie</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Hub_Location__c</columns>
        <columns>Warehouse__c</columns>
        <columns>Section__c</columns>
        <columns>Level__c</columns>
        <columns>Box_Number__c</columns>
        <columns>Pallet_Place__c</columns>
        <columns>Width__c</columns>
        <columns>Depth__c</columns>
        <columns>Shelving_Subdivision__c</columns>
        <columns>M2_Height__c</columns>
        <columns>Max_Weight_p_m2__c</columns>
        <columns>Hub_Building_Site__c</columns>
        <columns>Occupied__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locaties</pluralLabel>
    <recordTypes>
        <fullName>Gate</fullName>
        <active>true</active>
        <label>Gate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hublocation</fullName>
        <active>true</active>
        <label>Hublocation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Site_Location</fullName>
        <active>true</active>
        <label>Site Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vertical_Transport</fullName>
        <active>true</active>
        <label>Vertical Transport</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Amount_can_t_be_less_then_0</fullName>
        <active>true</active>
        <errorConditionFormula>OR( Available_amount__c &lt;0,  Current_amount__c &lt;0)</errorConditionFormula>
        <errorMessage>Amount can&apos;t be less then 0</errorMessage>
    </validationRules>
</CustomObject>